added performance settings